; ModuleID = '/home/carl/AnghaBench/reactos/base/services/dhcpcsvc/dhcp/extr_hash.c_new_hash.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/dhcpcsvc/dhcp/extr_hash.c_new_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_table = type { i32* }

@DEFAULT_HASH_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hash_table* @new_hash() #0 {
  %1 = alloca %struct.hash_table*, align 8
  %2 = alloca %struct.hash_table*, align 8
  %3 = load i32, i32* @DEFAULT_HASH_SIZE, align 4
  %4 = call %struct.hash_table* @new_hash_table(i32 %3)
  store %struct.hash_table* %4, %struct.hash_table** %2, align 8
  %5 = load %struct.hash_table*, %struct.hash_table** %2, align 8
  %6 = icmp ne %struct.hash_table* %5, null
  br i1 %6, label %9, label %7

7:                                                ; preds = %0
  %8 = load %struct.hash_table*, %struct.hash_table** %2, align 8
  store %struct.hash_table* %8, %struct.hash_table** %1, align 8
  br label %20

9:                                                ; preds = %0
  %10 = load %struct.hash_table*, %struct.hash_table** %2, align 8
  %11 = getelementptr inbounds %struct.hash_table, %struct.hash_table* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* @DEFAULT_HASH_SIZE, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @memset(i32* %13, i32 0, i32 %17)
  %19 = load %struct.hash_table*, %struct.hash_table** %2, align 8
  store %struct.hash_table* %19, %struct.hash_table** %1, align 8
  br label %20

20:                                               ; preds = %9, %7
  %21 = load %struct.hash_table*, %struct.hash_table** %1, align 8
  ret %struct.hash_table* %21
}

declare dso_local %struct.hash_table* @new_hash_table(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
